# ReliableAgent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-pydantic-compat-shim.md  0002-orchestrator-state-machine.md  0003-llm-protocol-and-mock-first-testing.md  0004-golden-task-suite-design.md  0005-phase3-critic-replanner-guardrails.md  0006-type-hints-caching-performance-fix.md  0007-package-build-verification.md  0008-reliable-orchestrator-and-evaluation-harness-dx.md  0009-token-metrics-and-output-validation.md  0010-real-pydantic-field-validator-default-gap.md  0011-second-real-ci-run-mypy-and-ruff-fixes.md
docs/: architecture.md  portfolio_summary.md  roadmap_status.md
examples/: advanced_reliability.py  compare_configurations.py  profile_performance.py  quickstart.py  roadmap_dx_example.py  run_evaluation.py
scripts/: run_tests.py  verify_build.py
src/reliableagent/: __init__.py
src/reliableagent/_compat/: __init__.py  _fallback.py
src/reliableagent/config/: __init__.py  settings.py
src/reliableagent/core/: __init__.py  enums.py  models.py  orchestrator.py  reliable_orchestrator.py  state_machine.py
src/reliableagent/evaluation/: __init__.py  comparison.py  factory.py  failure_analysis.py  golden_task.py  golden_tasks.py  golden_tools.py  harness.py  metrics.py  runner.py
src/reliableagent/exceptions/: __init__.py
src/reliableagent/executor/: __init__.py  executor.py  tool_registry.py
src/reliableagent/guardrails/: __init__.py  base.py  basic.py  output_filter.py  policy.py  runner.py
src/reliableagent/llm/: __init__.py  anthropic_client.py  base.py  mock.py  usage.py
src/reliableagent/memory/: __init__.py  backend.py
src/reliableagent/observability/: __init__.py  events.py  sinks.py  tracer.py
src/reliableagent/planner/: __init__.py  base.py  critic.py  llm_planner.py  process_critic.py  prompts.py  replanner.py
tests/: __init__.py  conftest.py  helpers.py
tests/_pytest_shim/: pytest.py
tests/eval/: __init__.py  test_comparison.py  test_evaluation_harness.py  test_failure_analysis.py  test_golden_suite.py  test_golden_task.py  test_metrics.py  test_runner.py
tests/integration/: __init__.py  test_orchestrator.py  test_phase3_features.py  test_reliable_orchestrator_dx.py
tests/unit/: __init__.py  test_compat_validators.py  test_config.py  test_exceptions.py  test_executor.py  test_guardrails.py  test_llm.py  test_llm_usage.py  test_memory.py  test_models.py  test_output_filter_guardrail.py  test_planner_and_critic.py  test_policy_guardrail.py  test_process_critic.py  test_process_supervision_models.py  test_replanner.py  test_state_machine.py  test_tool_output_validation.py  test_type_hints_caching.py
