[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliableagent"
version = "0.1.0"
description = "A reliability-first, guardrail-centric orchestration framework for building robust multi-agent systems with built-in evaluation and observability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ReliableAgent Contributors" }]
keywords = ["agents", "llm", "orchestration", "reliability", "guardrails", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.9; python_version < '3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/reliableagent/reliableagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reliableagent*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "N",   # pep8-naming
    "ANN", # annotations
    "S",   # bandit (security)
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing-type-self (deprecated rule)
    "ANN102", # missing-type-cls (deprecated rule)
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "ANN001", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["reliableagent"]

# ---------------------------------------------------------------------------
# Mypy (static typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
packages = ["reliableagent"]
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise multiple components together",
]

[tool.coverage.run]
source = ["src/reliableagent"]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
