[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliableagent"
version = "0.1.0"
description = "A reliability-first, guardrail-centric orchestration framework for building robust multi-agent systems with built-in evaluation and observability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ReliableAgent Contributors" }]
keywords = ["agents", "llm", "orchestration", "reliability", "guardrails", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.9; python_version < '3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/reliableagent/reliableagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reliableagent*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "N",   # pep8-naming
    "ANN", # annotations
    "S",   # bandit (security)
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
    "BLE",  # flake8-blind-except: catches bare `except Exception`; every
            # instance in this codebase already carries a justified
            # `# noqa: BLE001` explaining why that boundary intentionally
            # catches broadly (e.g. "never let a tool crash the control
            # loop") -- this rule was always the intent, just never
            # actually added to this list until a real ruff run showed
            # those comments as unused.
]
ignore = [
    "ANN101", # missing-type-self (deprecated rule)
    "ANN102", # missing-type-cls (deprecated rule)
    "ANN002", # missing-type-args (*args) -- rarely load-bearing; the args
              #   themselves are usually typed at their call site instead
    "ANN003", # missing-type-kwargs (**kwargs) -- same reasoning as ANN002
    "ANN202", # missing-return-type-private-function -- enforced on PUBLIC
              #   functions (ANN201) since that's this project's actual
              #   "Explicit Contracts" surface (see docs/architecture.md
              #   section 1); requiring it on every one of this codebase's
              #   99 private (_-prefixed) helpers and 47 dunder methods
              #   too is enforcement without much added clarity, and was
              #   the single largest contributor to a 225-error first
              #   real ruff run once network access allowed installing it
              #   -- see docs/roadmap_status.md's "Post-Delivery Audit"
              #   and adr/0010 for the full story of that first real run.
    "ANN204", # missing-return-type-special-method (__init__ etc.) --
              #   same reasoning: near-universally `-> None`, low value
              #   to enforce project-wide once it's already the norm.
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["ANN"] # narrated example scripts favor readability
    # over exhaustive annotation; every example still type-hints its
    # public functions where it aids clarity, just not enforced by ruff.
"scripts/**/*.py" = ["ANN"]  # same reasoning as examples/ above
"tests/**/*.py" = ["S101", "ANN201", "ANN001", "S105", "S106"]
"src/reliableagent/_compat/_fallback.py" = ["ANN401"]
    # This file is, by design, a from-scratch reimplementation of the
    # dynamically-typed slice of the Pydantic v2 API (see adr/0001) --
    # `Any` is the CORRECT type for a field's default, a coerced value,
    # or a validator's raw input in a library that stands in for a
    # dynamically-typed validation library. ANN401 (no explicit Any) is
    # exactly the wrong rule for this one file, for the same reason it's
    # the right rule everywhere else in this codebase.

[tool.ruff.lint.isort]
known-first-party = ["reliableagent"]

# ---------------------------------------------------------------------------
# Mypy (static typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
packages = ["reliableagent"]
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

# `packages = ["reliableagent"]` above only scopes mypy when it's invoked
# with no path arguments (plain `mypy`). Running `mypy .` or
# `mypy src/reliableagent tests` (both common, reasonable invocations)
# bypasses that scoping entirely and applies `strict = true` -- including
# `disallow_untyped_defs` -- to test/example/script code, which was never
# meant to be held to the library's own strictness bar (matching exactly
# the reasoning behind ruff's `ANN` exemptions for the same three
# directories, see the `[tool.ruff.lint.per-file-ignores]` section
# above). These overrides make `mypy .` behave sanely regardless of the
# exact invocation, rather than relying on everyone remembering to run
# bare `mypy`.
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "examples.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

# This project's `_compat/_fallback.py` is, by design, a from-scratch
# reimplementation of the dynamically-typed slice of the Pydantic v2 API
# (see `adr/0001`) -- it legitimately needs `Any` throughout (field
# values, defaults, coerced results) in a way ordinary application code
# should not. `disallow_any_explicit` isn't even enabled here, but
# `warn_return_any`/strict mode's related checks are noisy for exactly
# this one file for the same underlying reason; scoped narrowly rather
# than relaxed project-wide.
[[tool.mypy.overrides]]
module = "reliableagent._compat._fallback"
warn_return_any = false

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise multiple components together",
]

[tool.coverage.run]
source = ["src/reliableagent"]
branch = true

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
